# webgpu-template

./: .gitignore  Cargo.toml  Makefile
core/: Cargo.toml
core/src/: asset_management.rs  core.rs  lib.rs
core/src/assets/textures/: handsome.jpg.toml
core/src/ecs/: mod.rs
core/src/ecs/components/: camera.rs  mesh_filter.rs  mod.rs  rotate_component.rs  transform.rs
core/src/ecs/components/gpu_bindings/: camera_bindings.rs  mod.rs  model_bindings.rs
core/src/ecs/components/materials/: mod.rs  unlit_diffuse_material.rs
core/src/ecs/entity_bundles/: camera_bundle.rs
core/src/ecs/resources/: apc_resources.rs  http_resources.rs  input.rs  mod.rs  screen_parameters.rs  time.rs
core/src/ecs/systems/: mod.rs  rotate_transform_system.rs  update_camera_system.rs  update_input_system.rs  update_model_bindings_system.rs
core/src/events/: mod.rs  screen_resize_event.rs
core/src/gpu_resources/: mod.rs  render_resources.rs
core/src/gpu_resources/layouts/: camera_uniform_layout.rs  mod.rs  model_uniform_layout.rs  texture_uniform_layout.rs
core/src/gpu_resources/pipelines/: mod.rs  unlit_diffuse_pipeline.rs
core/src/gpu_resources/shaders/: mod.rs  shader_macros.rs  unlit_diffuse.wgsl
core/src/gpu_resources/shaders/include/: basic_vertex.wgsl  camera.wgsl  camera_h.wgsl  font_types.wgsl  model.wgsl  model_h.wgsl  texture_sampler.wgsl
core/src/gpu_resources/types/: basic_vertex.rs  font_types.rs  gpu_camera.rs  gpu_model.rs  gpu_type_macros.rs  mod.rs  vertex.rs
core/src/render/: mod.rs  root_renderer.rs  unlit_diffuse_sub_renderer.rs
core/src/text_engine/: font_data.rs  font_style.rs  interpolation_value.rs  line_builder.rs  mod.rs  text_object.rs  text_segment.rs  utils.rs  variable_enum.rs
core/src/traits/: apc_traits.rs  http_traits.rs  mod.rs
core/src/utils/: buffer.rs  colors.rs  create_depth_texture.rs  degrees_and_radians.rs  mod.rs  primitives.rs  texture.rs
lib/: Cargo.toml
lib/src/: lib.rs
native/: Cargo.toml
native/src/: lib.rs  main.rs  native_apc_handler.rs  native_http_requester.rs  native_winit_handler.rs
winit/: Cargo.toml
winit/src/: app.rs  lib.rs  traits.rs  user_event.rs
