[workspace]
resolver = "2"

members = [
    "core",
    "lib"
]

# package metadata that is identical for all crates in the workspace
[workspace.package]
version = "0.0.1"
authors = ["MYSELF"]
edition = "2024"

# dependencies whose versions are managed by the workspace
[workspace.dependencies]
lib = {path = "lib"}
num-traits = "0.2.18"
bevy_ecs = "0.13.2"
bytemuck = "1.14.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
crossbeam = "0.8.4"
encase = "0.7.0"
env_logger = "0.10.1"
futures = "0.3.29"
glam = "0.25.0"
image = "0.24.7"
include-wgsl-oil = { git = "https://github.com/maboesanman/include-wgsl-oil.git", branch = "misc-additions" }
log = "0.4.20"
paste = "1.0.14"
rand = "0.8.5"
tokio = { version = "1.34", features = ["sync"] }
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
wasm-sockets = "1.0.0"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Request",
    "RequestInit",
    "Response",
    "console",
] }
web-time = "1.1.0"
wgpu = { version = "0.20.1", default-features = false, features = [
    "wgsl",
    "webgl",
    "fragile-send-sync-non-atomic-wasm",
    "naga-ir",
    "metal",
] }

wgpu_text = "0.8.8"
winit = "0.30.3"

[profile.dev]
debug = true
debug-assertions = true
lto = "off"

# agressively optimize for speed
[profile.release]
lto = true
opt-level = 3
strip = true

# aggressively optimize for size
[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1

[profile.dev.package."*"]
inherits = "dev"
debug = false
strip = true
